--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -22,6 +22,7 @@ $white: #fff;
 $black: #000;
 $dark: #1B2530;
 $dark2: #132732;
+$dark3: #5D7481;
 $red: #F54A33;
 $green: #60AF46;
 $light-grey: #94A8B2;
