- added the basic login and fetch data functionalities

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -352,6 +352,7 @@ h4,
             object-position: 0% 0%;
             border-top-right-radius: 12px;
             border-top-left-radius: 12px;
+            height: calc(100% - 48px);
         }
 
         .tile__description {
