- added ajax for the companies and products list

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -389,7 +389,7 @@ h4,
             text-align: left;
             width: 100%;
             margin-top: 5px;
-            margin-bottom: 5px;
+            padding-bottom: 5px;
             color: $dark2;
         }
     }
