--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -416,6 +416,18 @@ h4,
         width: 100%;
         height: 100%;
         z-index: 2;
+        transition: opacity 0.2s ease-out;
+        opacity: 1;
+        pointer-events: all;
+
+        &.tile__overlay--opacity {
+            opacity: 0;
+            pointer-events: none;
+        }
+
+        &--relative {
+            position: relative;
+        }
     }
 }
 
@@ -989,6 +1001,7 @@ $lineSize: 0.15em;
         width: 100%;
         max-width: 100%;
         min-height: 280px;
+        max-height: 300px;
         object-fit: cover;
 
         @include mq('small') {
@@ -1015,6 +1028,7 @@ $lineSize: 0.15em;
         font-weight: bold;
         letter-spacing: 0.5px;
         position: relative;
+        padding-right: 30px;
     }
 
     &__under-title {
